<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/settings_height_entries"
        android:entryValues="@array/settings_height_values"
        android:key="height-v2"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_height" />

    <ListPreference
        android:defaultValue="3"
        android:entries="@array/settings_padding_entries"
        android:entryValues="@array/settings_padding_values"
        android:key="padding-v2"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_padding" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/settings_size_entries"
        android:entryValues="@array/settings_size_values"
        android:key="size-v2"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_size" />

    <ListPreference
        android:defaultValue="en"
        android:entries="@array/settings_lang_entries"
        android:entryValues="@array/settings_lang_values"
        android:key="lang-v2"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_lang" />

    <ListPreference
        android:defaultValue="dark"
        android:entries="@array/settings_theme_entries"
        android:entryValues="@array/settings_theme_values"
        android:key="theme-v2"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_theme" />
</PreferenceScreen>
